dev: a bit of websocket stuff and devProxy for nuxt
