# server/docs/swagger.json
@@ -10,7 +10,6 @@
         },
         "version": "1.0"
     },
-    "host": "http://localhost:8080",
     "paths": {
         "/api/game": {
             "get": {
@@ -127,55 +126,6 @@
                     }
                 }
             }
-        },
-        "/ws/dart": {
-            "get": {
-                "description": "Handles WebSocket connections for general game updates",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "websocket"
-                ],
-                "summary": "Handle general WebSocket connections",
-                "responses": {
-                    "101": {
-                        "description": "Switching Protocols to WebSocket"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    }
-                }
-            }
-        },
-        "/ws/dart/{gameId}": {
-            "get": {
-                "description": "Handles WebSocket connections for specific dart games",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "websocket"
-                ],
-                "summary": "Handle game-specific WebSocket connections",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Game ID",
-                        "name": "gameId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "101": {
-                        "description": "Switching Protocols to WebSocket"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -216,6 +166,9 @@
         "models.Game": {
             "type": "object",
             "properties": {
+                "gameMode": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
